--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
 
   <meta charset="utf-8"/>
-<title>Exported DatA</title>
+<title>Exported Data</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <link href="css/style.css" rel="stylesheet"/>
